# libghostty-dotnet

./: .gitignore  Directory.Build.props  Directory.Packages.props  Ghostty.Vt.sln  README.md  generate-bindings.ps1  generate-bindings.rsp  ghostty-upstream.json  justfile  libghostty-dotnet.sln  libghostty.json  setup.ps1
.github/workflows/: ci.yml  daily-upstream.yml  release.yml  visual-tests.yml
examples/Unity-Bridge/: .gitignore  README.md
examples/Unity-Bridge/Assets/Plugins/GhosttyBridge/: CMakeLists.txt  GhosttyBridge.cpp  build_bridge.bat
examples/Unity-Direct/: .gitignore  README.md
examples/Unity/Assets/Plugins/GhosttyBridge/: CMakeLists.txt  GhosttyBridge.cpp
examples/WPF-Direct/: WPF-Direct.slnx
examples/WPF-Simple/: WPF-Simple.slnx
examples/Win32/: Win32.slnx
examples/WinForms/: WinForms.slnx
examples/WinUI3/: WinUI3.slnx
src/Ghostty.D3D12/: D3D12.cs  D3D12Constants.cs  D3D12CreateDevice.cs  D3D12Structs.cs  Ghostty.D3D12.csproj  IID.cs  SharedTextureHelper.cs
src/Ghostty.Interop/: Ghostty.Interop.csproj  GhosttyApp.cs
src/Ghostty.Vt/: BuildInfo.cs  Formatter.cs  FormatterOptions.cs  Ghostty.Vt.csproj  GridRef.cs  KittyGraphics.cs  OscParser.cs  RenderState.cs  Terminal.cs  TerminalOptions.cs
tests/Ghostty.Tests.Visual/: Ghostty.Tests.Visual.csproj  Ghostty.Tests.Visual.slnx  testsettings.json
tests/Ghostty.Vt.Tests/: BuildInfoTests.cs  FocusPasteSizeReportTests.cs  FormatterTests.cs  Ghostty.Vt.Tests.csproj  GlobalUsings.cs  GridRefFullTests.cs  IntegrationTests.cs  KeyEncoderTests.cs  KittyGraphicsTests.cs  MouseEncoderTests.cs  (+13 more)
(+72 files in other folders)
